force-app/main/default/objects/Bonus__c/Bonus__c.object-meta.xml
<CustomObject>
    <description>Example object for bonuses</description>
    <label>Bonus</label>
    <nameField>
        <label>Bonus Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bonuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>