force-app/main/default/objects/Bonus__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee</label>
    <referenceTo>flair__Employee__c</referenceTo>
    <relationshipLabel>Bonuses</relationshipLabel>
    <relationshipName>Bonuses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>