force-app/main/default/objects/Bonus__c/fields/Employee_One_Time_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Employee_One_Time_Compensation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related one-time compensation after approval</description>
    <label>Employee One-Time Compensation</label>
    <referenceTo>flair__Employee_One_Time_Compensation__c</referenceTo>
    <relationshipLabel>Bonuses</relationshipLabel>
    <relationshipName>Bonuses</relationshipName>
    <type>Lookup</type>
</CustomField>